added changes to enable chronicle